# ros_basic

./: CMakeLists.txt  README.md  package.xml
devel/: .catkin  .rosinstall  setup.sh
devel/include/basic_practice/: MsgTutorial.h  SrvTutorial.h  SrvTutorialRequest.h  SrvTutorialResponse.h
devel/lib/basic_practice/: service_client  service_server  topic_publisher  topic_subscriber
devel/lib/pkgconfig/: basic_practice.pc  rosP2.pc  rosPractice.pc  teleop_pkg.pc
devel/lib/python2.7/dist-packages/basic_practice/msg/: _MsgTutorial.py
devel/lib/python2.7/dist-packages/basic_practice/srv/: _SrvTutorial.py
devel/lib/rosP2/: count_subscriber  topic_publisher
devel/lib/rosPractice/: teleop_node
devel/lib/teleop_pkg/: song_teleop_node
devel/share/basic_practice/cmake/: basic_practice-msg-extras.cmake  basic_practice-msg-paths.cmake  basic_practiceConfig.cmake
devel/share/common-lisp/ros/basic_practice/msg/: MsgTutorial.lisp  _package.lisp  (+2 more)
devel/share/rosP2/cmake/: rosP2Config.cmake
devel/share/rosPractice/cmake/: rosPractice-msg-paths.cmake  rosPracticeConfig.cmake
devel/share/roseus/ros/basic_practice/: manifest.l
devel/share/roseus/ros/rosPractice/: manifest.l
devel/share/teleop_pkg/cmake/: teleop_pkgConfig.cmake
model_practice/song/: model.config  model.sdf
model_practice/tutorial/: model.config  model.sdf
src/: Teleop.cc
src/basic_practice/: CMakeLists.txt
src/basic_practice/src/: basic_practice.launch  service_client.cpp  service_server.cpp  topic_publisher.cpp  topic_subscriber.cpp
src/basic_practice/srv/: SrvTutorial.srv
(+8 files in other folders)
