<?xml version="1.0"?>
<package format="2">
  <name>myProject</name>
  <version>0.0.0</version>
  <description>The myProject package</description>
  <maintainer email="song@todo.todo">song</maintainer>
  <license>TODO</license>

  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
